--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ nav.navbar {
   transition: 0.32s ease-in-out;
 }
 nav.navbar.scrolled {
-  padding: 0px 0;
+  padding: 10px 0;
   background-color: #121212;
 }
 nav.navbar a.navbar-brand {
@@ -96,7 +96,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: #fff !important;
   letter-spacing: 0.8px;
-  padding: 0 25px;
+  padding: 3px 25px;
   font-size: 18px;
   opacity: 0.75;
 }
@@ -109,12 +109,12 @@ span.navbar-text {
   align-items: center;
 }
 .social-icon {
-  display: inline-block;
-  margin-left: 14px;
+  display: flex;
+  justify-content: center;
 }
 .social-icon a {
-  width: 42px;
-  height: 42px;
+  width: 60px;
+  height: 60px;
   background: rgba(217, 217, 217, 0.1);
   display: inline-flex;
   border-radius: 50%;
@@ -126,8 +126,8 @@ span.navbar-text {
 }
 .social-icon a::before {
   content: "";
-  width: 42px;
-  height: 42px;
+  width: 60px;
+  height: 60px;
   position: absolute;
   background-color: #ffffff;
   border-radius: 50%;
@@ -138,7 +138,7 @@ span.navbar-text {
   transform: scale(1);
 }
 .social-icon a img {
-  width: 40%;
+  width: 60%;
   z-index: 1;
   transition: 0.3s ease-in-out;
 }
@@ -152,7 +152,6 @@ span.navbar-text {
   border: 1px solid #fff;
   padding: 18px 34px;
   font-size: 18px;
-  margin-left: 18px;
   position: relative;
   background-color: transparent;
   transition: 0.3s ease-in-out;
@@ -271,24 +270,29 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   right: 0;
   top: 0;
   width: 100%;
+  height: 25%;
   object-fit: cover;
-  height: 20%;
   z-index: -1;
   filter: brightness(0.8) saturate(1.5);
 }
 
 .computerCanvas {
-  margin-top: -50px;
+  margin-top: -20px;
   margin-left: 20px;
   height: 400px;
   width: 100%;
 }
 .banner {
   margin-top: 0;
-  padding: 150px 0 150px 0;
+  padding: 200px 0 100px 0;
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.introduction {
+  border-radius: 20px;
+  padding: 4rem;
 }
 
 .highlight {
@@ -301,23 +305,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   );
 }
 
-.banner .tagline {
-  font-weight: 700;
-  letter-spacing: 0.8px;
-  width: 100%;
-  padding: 10px 0px;
-  background: linear-gradient(
-    90.21deg,
-    rgba(181, 0, 108, 0.429) -5.91%,
-    rgba(90, 18, 103, 0) 111.58%
-  );
-  border: 0px solid rgba(255, 255, 255, 0);
-  font-size: 20px;
-  margin-bottom: 26px;
-  display: inline-block;
-}
 .banner h1 {
-  font-size: 42px;
+  font-size: 52px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.3;
@@ -340,6 +329,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: flex;
   align-items: center;
 }
+
 .banner button svg {
   font-size: 25px;
   margin-left: 10px;
@@ -349,44 +339,32 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner button:hover svg {
   margin-left: 25px;
 }
+
 .banner img {
   animation: updown 3s linear infinite;
 }
-@keyframes updown {
-  0% {
-    transform: translateY(-20px);
-  }
-  50% {
-    transform: translateY(20px);
-  }
-  100% {
-    transform: translateY(-20px);
-  }
-}
-.txt-rotate > .wrap {
-  border-right: 0.08em solid #666;
+
+.banner-skills-divider {
+  width: 100%;
 }
 
 /* Skills */
 
-/* .skill-bx {
-  backdrop-filter: blur(200px) opacity(0.97) brightness(0.4);
-  text-align: center;
-  padding: 60px 50px;
-  margin: -60px;
-  border-radius: 10px;
-} */
-
+.banner-skills-divider {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 500px;
+  z-index: 10;
+}
 .skill {
-  padding: 0 0 50px 0;
+  padding: 0 0 0px 0;
   position: relative;
   width: 100%;
 }
 .skill-bx {
-  backdrop-filter: blur(20px) opacity(0.85) brightness(1.4);
+  background-color: #1c1732;
   text-align: center;
   padding: 60px 50px;
-  margin: -20px;
   border-radius: 10px;
 }
 .skill h2 {
@@ -398,7 +376,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  margin: 14px 0 75px 0;
+  margin: 14px 0 65px 0;
 }
 .skill-slider {
   width: 100%;
@@ -418,20 +396,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .skill-slider .item img {
-  width: 70%;
+  width: 80%;
   margin: 0 auto 15px auto;
-}
-.background-image-left {
-  top: 28%;
-  position: absolute;
-  bottom: 0;
-  width: 40%;
-  z-index: -4;
 }
 
 /* Projects */
 .project {
-  padding: 80px 0;
+  padding: 0px 0;
   position: relative;
   background-color: rgb(183, 73, 0);
 }
@@ -501,16 +472,25 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .testimonials {
   background: rgb(60, 23, 62);
-  padding: 80px 0px;
+  padding: 0px 0px;
 }
 
 .testimonial {
   padding: 1rem;
   margin: 2rem 1rem;
-  backdrop-filter: blur(60px) brightness(1.2) opacity(0.8);
+  backdrop-filter: brightness(1.2) opacity(0.8);
   box-shadow: 0 0 20px rgba(26, 26, 26, 0.052), 0 0 40px rgba(26, 26, 26, 0.035),
     0 0 80px rgba(26, 26, 26, 0.1);
   border-radius: 20px;
+}
+
+.testimonial-name {
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+}
+
+.testimonial-relation {
+  font-size: 1.2rem;
 }
 
 .testimonials h1 {
@@ -665,4 +645,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #b8b8b8;
   letter-spacing: 0.5px;
   margin-top: 20px;
+}
+
+.toolbox {
+  height: 700px;
 }
