--- a/src/App.css
+++ b/src/App.css
@@ -270,7 +270,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   right: 0;
   top: 0;
   width: 100%;
-  height: 25%;
+  height: 27%;
   object-fit: cover;
   z-index: -1;
   filter: brightness(0.8) saturate(1.5);
@@ -344,27 +344,20 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   animation: updown 3s linear infinite;
 }
 
-.banner-skills-divider {
-  width: 100%;
-}
-
 /* Skills */
 
-.banner-skills-divider {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 500px;
-  z-index: 10;
-}
 .skill {
-  padding: 0 0 0px 0;
+  padding: 40px 0 0px 0;
+  margin-top: 400px;
   position: relative;
   width: 100%;
+  background-color: #121212;
 }
 .skill-bx {
-  background-color: #1c1732;
+  background-color: #1d013a;
   text-align: center;
   padding: 60px 50px;
+  margin-top: -500px;
   border-radius: 10px;
 }
 .skill h2 {
@@ -468,6 +461,27 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.8px;
 }
 
+.project-testimonials-devider {
+  margin-bottom: -20px;
+}
+
+.programming-skills-wrapper {
+  background-color: #000;
+}
+
+.programming-skills {
+  background-color: #1c1732;
+  text-align: center;
+  padding: 1rem;
+  width: 120px;
+  color: rgba(253, 253, 253, 0.817);
+  border-radius: 8px;
+}
+.programming-skills:hover {
+  font-weight: 700;
+  color: #ffffff;
+}
+
 /* Testimonials */
 
 .testimonials {
@@ -479,8 +493,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 1rem;
   margin: 2rem 1rem;
   backdrop-filter: brightness(1.2) opacity(0.8);
-  box-shadow: 0 0 20px rgba(26, 26, 26, 0.052), 0 0 40px rgba(26, 26, 26, 0.035),
-    0 0 80px rgba(26, 26, 26, 0.1);
+
   border-radius: 20px;
 }
 
@@ -497,6 +510,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   font-size: 42px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .testimonials h5 {
@@ -527,8 +541,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 20px;
   margin: 30px 40px;
   border-radius: 36px;
-  box-shadow: 0 0 20px rgba(26, 26, 26, 0.1), 0 0 40px rgba(26, 26, 26, 0.1),
-    0 0 80px rgba(26, 26, 26, 0.1);
 }
 .contact img {
   width: 70%;
@@ -647,6 +659,45 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-top: 20px;
 }
 
+.toolbox-wrapper {
+  padding: 2rem;
+  background-color: rgb(183, 73, 0);
+}
+
 .toolbox {
-  height: 700px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.toolbox img {
+  width: 60%;
+}
+
+.toolbox p {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+}
+.toolbox-wrapper h2 {
+  font-size: 35px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 35px;
+  margin-top: 40px;
+}
+
+.toolbox .skill-card {
+  display: flex;
+  border: none;
+  background: linear-gradient(90.21deg, #4636aacb -5.91%, #350230bf 111.58%);
+  height: auto;
+  margin-bottom: 2rem;
+  width: 100%;
+}
+.toolbox .skill-card:hover {
+  background: linear-gradient(90.21deg, #4262d5cb -5.91%, #8d0980bf 111.58%);
+  font-weight: 900;
+}
+
+.skill-icon {
+  width: 200px;
 }
